--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
