--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^16.1.6",
     "@contentful/rich-text-types": "^17.2.5",
+    "@emailjs/browser": "^4.4.1",
     "@vercel/speed-insights": "^1.2.0",
     "contentful": "^11.8.12",
     "lucide-react": "^0.546.0",
