--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^4.4.1",
     "@vercel/speed-insights": "^1.2.0",
     "contentful": "^11.8.12",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.546.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
