--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "contentful": "^11.8.12",
     "framer-motion": "^12.23.26",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.546.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
