--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
     "eslint-config-next": "16.0.0",
     "tailwindcss": "^4.1.16",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not op_mini all",
+    "> 0.2% and last 2 versions"
+  ]
 }
