--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "typescript": "^5"
   },
   "browserslist": [
-    "defaults",
-    "not IE 11",
+    "> 0.5%",
+    "last 2 versions",
+    "Firefox ESR",
+    "not dead",
     "not op_mini all",
-    "> 0.2% and last 2 versions"
+    "not IE 11"
   ]
 }
